EMHT wrapper around ICY implementation

--- a/setup.cfg
+++ b/setup.cfg
@@ -35,7 +35,9 @@ install_requires =
 include_package_data = False
 
 [options.package_data]
-* = py.typed
+* =
+    py.typed
+    emht_protocol*
 
 [options.packages.find]
 exclude=
