--- a/setup.cfg
+++ b/setup.cfg
@@ -16,16 +16,14 @@ classifiers =
     License :: OSI Approved :: MIT License
     Natural Language :: English
     Operating System :: OS Independent
-    Programming Language :: Python :: 3.6
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
     Programming Language :: Python :: 3.10
-    Programming Language :: Python :: 3.11
 
 [options]
 packages = find:
-python_requires = >=3.6
+python_requires = >=3.7, <3.11
 install_requires =
     numba
     numpy
