Better version check in CD using setup.py functionnality

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,7 +16,7 @@ jobs:
           python-version: '3.10'
       - name: Check deployed version
         run: |
-          python _check_version_deployed.py
+          [ "$GITHUB_REF_NAME" == "v$(python setup.py --version)" ]
   tests:
     needs: check_version
     uses: ./.github/workflows/tests.yml
