Install extra dependencies for dev

--- a/setup.cfg
+++ b/setup.cfg
@@ -42,3 +42,9 @@ include_package_data = False
 [options.packages.find]
 exclude=
     tests*
+
+
+[options.extras_require]
+full =
+    pylapy[scipy]
+    torch-tps
