Add torch_tps and pylapy to standard requirements
They are light and are becoming more used across mutliple implementations. Thus the change

--- a/setup.cfg
+++ b/setup.cfg
@@ -29,8 +29,9 @@ install_requires =
     numpy
     opencv-python
     pillow
-    pylapy
+    pylapy[scipy]
     torch
+    torch_tps
     tqdm
 include_package_data = False
 
@@ -46,7 +47,5 @@ exclude=
 
 [options.extras_require]
 full =
-    pylapy[scipy]
     stardist
     tensorflow
-    torch-tps
