Update black and drop black support for python 3.7

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -38,6 +38,7 @@ jobs:
         run: |
           mypy byotrack
       - name: black
+        if: ${{ matrix.python-version != 3.7 }}  # Recent black do not support python 3.7
         run: |
           black --check .
       # TODO
