--- a/setup.cfg
+++ b/setup.cfg
@@ -20,10 +20,11 @@ classifiers =
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
     Programming Language :: Python :: 3.10
+    Programming Language :: Python :: 3.11
 
 [options]
 packages = find:
-python_requires = >=3.7, <3.11
+python_requires = >=3.7, <3.12
 install_requires =
     numba
     numpy
