--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -14,8 +14,8 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
-        python-version: ["3.7", "3.8", "3.9", "3.10", "3.11"]
+        os: [ubuntu-latest, macos-13, windows-latest]  # let's build on mac 13 while the issue is being resolved
+        python-version: ["3.7", "3.8", "3.9", "3.10", "3.11", "3.12"]
 
     steps:
       - name: Set git to use LF
@@ -27,9 +27,10 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Install dependencies
+      - name: Install dependencies  # Install torch != 2.3.0 until https://github.com/pytorch/pytorch/issues/124897 is fixed
         run: |
           python -m pip install --upgrade pip
+          pip install torch!=2.3.0
           pip install -r requirements-dev.txt
       - name: pylint
         run: |
