--- a/setup.cfg
+++ b/setup.cfg
@@ -12,7 +12,7 @@ url = https://github.com/raphaelreme/byotrack
 project_urls =
 
 classifiers =
-    Development Status :: 2 - Pre-Alpha
+    Development Status :: 4 - Beta
     License :: OSI Approved :: MIT License
     Natural Language :: English
     Operating System :: OS Independent
@@ -21,10 +21,11 @@ classifiers =
     Programming Language :: Python :: 3.9
     Programming Language :: Python :: 3.10
     Programming Language :: Python :: 3.11
+    Programming Language :: Python :: 3.12
 
 [options]
 packages = find:
-python_requires = >=3.7, <3.12
+python_requires = >=3.7
 install_requires =
     numba
     numpy
