--- a/setup.cfg
+++ b/setup.cfg
@@ -49,7 +49,8 @@ exclude=
 
 [options.extras_require]
 full =
-    tifffile
     matplotlib
+    scikit-image
     stardist
     tensorflow
+    tifffile
