Run CI on the latest macos and pytorch (previous issues are solved)

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -14,8 +14,14 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-13, windows-latest]  # let's build on mac 13 while the issue is being resolved
+        os: [ubuntu-latest, macos-latest, windows-latest]
         python-version: ["3.7", "3.8", "3.9", "3.10", "3.11", "3.12"]
+        exclude:  # Python < v3.8 does not support Apple Silicon ARM64.
+          - python-version: "3.7"
+            os: macos-latest
+        include:  # So run those legacy versions on Intel CPUs.
+          - python-version: "3.7"
+            os: macos-13
 
     steps:
       - name: Set git to use LF
@@ -27,10 +33,9 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Install dependencies  # Install torch != 2.3.0 until https://github.com/pytorch/pytorch/issues/124897 is fixed
+      - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install torch!=2.3.0
           pip install -r requirements-dev.txt
       - name: pylint
         run: |
