--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -16,11 +16,15 @@ jobs:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
         python-version: ["3.7", "3.8", "3.9", "3.10", "3.11", "3.12"]
-        exclude:  # Python < v3.8 does not support Apple Silicon ARM64.
-          - python-version: "3.7"
+        exclude:
+          - python-version: "3.7"  # Python < 3.8 does not support Apple Silicon ARM64.
+            os: macos-latest
+          - python-version: "3.8"  # Tensorflow install fails for python3.8 and macos-latest
             os: macos-latest
         include:  # So run those legacy versions on Intel CPUs.
           - python-version: "3.7"
+            os: macos-13
+          - python-version: "3.8"
             os: macos-13
 
     steps:
@@ -36,6 +40,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
+          pip install mypy!=1.11.0  # See (https://github.com/python/mypy/issues/17542)
           pip install -r requirements-dev.txt
       - name: pylint
         run: |
