Major improve of Video API
1. Now videos are loaded as RGB (We reverse opencv order and let others load as they usually do)
2. A new VideoReader is able to load videos from a list of image paths (or a folder)
3. Tiff are handled with tifffile: This allows to handle 3D videos.
   a. It supports reading only frame by frame (as pil)
   b. 3D + C + T is supported
   c. Also implemented some slicing at read time allowing to reduce memory and time comsumption
      with large 3D volumes to be sliced anyway.

--- a/setup.cfg
+++ b/setup.cfg
@@ -33,6 +33,7 @@ install_requires =
     pillow
     platformdirs
     pylapy[scipy]
+    tifffile[all]
     torch
     torch_tps
     tqdm
@@ -54,5 +55,4 @@ full =
     scikit-image
     stardist
     tensorflow
-    tifffile
     torch-kf
