--- a/.pylintrc
+++ b/.pylintrc
@@ -76,6 +76,7 @@ disable=raw-checker-failed,
         fixme,
         missing-function-docstring,
         missing-module-docstring,
+        unrecognized-option,
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
@@ -521,6 +522,9 @@ max-locals=15
 
 # Maximum number of parents for a class (see R0901).
 max-parents=7
+
+# Maximum number of positional arguments for function / method.
+max-positional-arguments=6
 
 # Maximum number of public methods for a class (see R0904).
 max-public-methods=20
