--- a/setup.cfg
+++ b/setup.cfg
@@ -35,7 +35,7 @@ install_requires =
     pylapy[scipy]
     tifffile[all]
     torch
-    torch_tps
+    torch-tps
     tqdm
 include_package_data = False
 
