--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -44,7 +44,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install mypy!=1.11.0  # See (https://github.com/python/mypy/issues/17542)
+          pip install torch --index-url https://download.pytorch.org/whl/cpu  # Install torch cpu instead of torch for linting(faster)
           pip install -r requirements-dev.txt
       - name: pylint
         run: |
