--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -15,21 +15,13 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        python-version: ["3.7", "3.8", "3.9", "3.10", "3.11", "3.12"]
+        python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
         exclude:
-          - python-version: "3.7"  # Python < 3.8 does not support Apple Silicon ARM64.
-            os: macos-latest
           - python-version: "3.8"  # Tensorflow install fails for python3.8 and macos-latest
             os: macos-latest
-          - python-version: "3.7"  # Not supported on ubuntu latest any longer
-            os: ubuntu-latest
         include:  # So run those legacy versions on Intel CPUs.
-          - python-version: "3.7"
-            os: macos-13
           - python-version: "3.8"
             os: macos-13
-          - python-version: "3.7"
-            os: ubuntu-22.04
 
     steps:
       - name: Set git to use LF
@@ -53,7 +45,6 @@ jobs:
         run: |
           mypy byotrack
       - name: black
-        if: ${{ matrix.python-version != 3.7 }}  # Recent black do not support python 3.7
         run: |
           black --check .
       # TODO
