--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,7 @@ version = attr: byotrack.__version__
 author = Raphael Reme
 author_email = raphaelreme-dev@protonmail.com
 description = Biological particle tracking with Python 
-keywords = Tracking, biologie, machine learning, statistics, optimization
+keywords = Tracking, biology, machine learning, statistics, optimization
 license = MIT
 long_description = file: README.md
 long_description_content_type = text/markdown
@@ -16,7 +16,6 @@ classifiers =
     License :: OSI Approved :: MIT License
     Natural Language :: English
     Operating System :: OS Independent
-    Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
     Programming Language :: Python :: 3.10
@@ -25,7 +24,7 @@ classifiers =
 
 [options]
 packages = find:
-python_requires = >=3.7
+python_requires = >=3.8
 install_requires =
     numba
     numpy
