--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,9 +1,13 @@
 version: 2
 
 build:
-  os: "ubuntu-22.04"
+  os: "ubuntu-24.04"
   tools:
-    python: "3.8"
+    python: "3.10"
+
+sphinx:
+  # Path to your Sphinx configuration file.
+  configuration: docs/source/conf.py
 
 python:
   install:
