--- a/setup.cfg
+++ b/setup.cfg
@@ -21,6 +21,7 @@ classifiers =
     Programming Language :: Python :: 3.10
     Programming Language :: Python :: 3.11
     Programming Language :: Python :: 3.12
+    Programming Language :: Python :: 3.13
 
 [options]
 packages = find:
@@ -52,7 +53,7 @@ exclude=
 full =
     matplotlib
     scikit-image
-    stardist
-    tensorflow
+    stardist;python_version<'3.13'
+    tensorflow;python_version<'3.13'
     torch-kf
     trackastra;python_version>='3.10'
