--- a/examples/ctc/requirements.txt
+++ b/examples/ctc/requirements.txt
@@ -1,3 +1,4 @@
-byotrack  # == 1.3.1
+byotrack  # == 1.3.1 for KOFT/SKT submission # 1.3.11 for TrackOnTra submission
+trackastra
 torch_kf
 scikit-image
