Support for a tracking graph track format.
Base view to convert to other widely used format (traccuracy, geff, or even rethink interface with icy/napari/fiji)

--- a/setup.cfg
+++ b/setup.cfg
@@ -27,6 +27,7 @@ packages = find:
 python_requires = >=3.9
 install_requires =
     backports.zstd;python_version<'3.14'
+    networkx
     numba
     numpy
     opencv-python
